fix: modal dimmed z-index set to 5(#master)

--- a/components/popover/modal/modal.module.scss
+++ b/components/popover/modal/modal.module.scss
@@ -16,5 +16,5 @@
   animation: dimmed-change 0.5s 1 alternate;
   animation-iteration-count: 1;
   animation-fill-mode: forwards;
-  z-index: 3;
+  z-index: 5;
 }
